...
      <Stack.Screen name="workouts" options={{ headerShown: false }} />
      <Stack.Screen name="select-workout" options={{ title: "Select Workout" }} />
      <Stack.Screen name="session" options={{ title: "Active Session", headerShown: false }} />
      <Stack.Screen name="profile" options={{ title: "My Profile" }} />
      <Stack.Screen name="session-summary" options={{ title: "Session Summary" }} />
      <Stack.Screen name="metrics" options={{ title: "Metrics" }} />
      <Stack.Screen name="settings" options={{ title: "Settings" }} />
    </Stack>
    </SafeAreaProvider>
  );
}

